Added: Internal and external links, word and character count for title and description. Design changes.

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
     "web_accessible_resources": [
         {
             "resources": [
-                "sidebar.html"
+                "sidebar.html",
+                 "google_sidebar.html"
             ],
             "matches": [
                 "*://*/*"
