--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Persistent SEO Sidebar",
-    "version": "1.3",
+    "version": "1.4",
     "description": "A Chrome extension with a persistent sidebar to display SEO information.",
     "permissions": [
         "tabs",
@@ -53,7 +53,6 @@
         "48": "icons/sidebar-icon-48.png",
         "128": "icons/sidebar-icon-128.png"
     },
-    "options_page": "settings.html",
-    "update_url": "https://seosidebar.haensel.pro/update.xml"
+    "options_page": "settings.html"
 
 }
